fixed background-color styling covering lqip image

--- a/styles/components/Card.module.scss
+++ b/styles/components/Card.module.scss
@@ -22,7 +22,6 @@
   object-fit: cover; // ensure image covers entire box, may crop image
   width: 100%;
   height: 8rem;
-  background-color: #000000;
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
 }
