--- a/styles/components/OptimizedImage.module.scss
+++ b/styles/components/OptimizedImage.module.scss
@@ -6,3 +6,7 @@
     left: 0;
   }
 }
+
+.svgImage {
+  background-color: #000000;
+}
